BIGTOP-2778: Delete PermSize / MaxPermsize options, no longer support by Java 8